--- a/signpost-app/build.gradle
+++ b/signpost-app/build.gradle
@@ -8,8 +8,10 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
+        classpath "io.realm:realm-gradle-plugin:10.9.0"
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
